src/widgets/snapshots/rstv__widgets__tab_bar__tests__snapshot_tabbar_middle_active.snap
---
source: src/widgets/tab_bar.rs
expression: render(1)
---
size: 30x1
cursor: hidden
text:
|Presets ┌RGB┐ Hue/Sat         |
attr:
|abbbbbb.caccc.abbbbbb.........|
legend:
  . default
  a fg=RGB(255,255,85) bg=RGB(170,170,170)
  b fg=RGB(0,0,0) bg=RGB(170,170,170)
  c fg=RGB(255,255,255) bg=RGB(170,170,170)
